packages/scaffolding-cli/templates/deploy/k8s/app_k8s/app_deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-stacks-web-app

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stacks-webapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: "app-dev.nonprod.amidostacks.com"
    http:
      paths:
      - path: /web/stacks(/|$)(.*)
        backend:
          serviceName: stacks-webapp
          servicePort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: stacks-webapp
  labels:
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: stacks
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: stacks

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stacks-webapp
  labels:
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: stacks
    app.kubernetes.io/version: 0.0.248-1684
    applicationName: stacks-webapp
    customerID: amido
    owner: amido-stacks
    projectID: stacks
    role: web
    stage: devel
    tier: frontend
    version: 0.0.248-1684
  namespace: dev-stacks-web-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: stacks-webapp
      app.kubernetes.io/component: web
      app.kubernetes.io/part-of: stacks
  template:
    metadata:
      labels:
        aadpodidbinding: stacks-webapp-identity
        app.kubernetes.io/name: stacks-webapp
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: stacks
    spec:
      containers:
        - name: web
          # this we need to pass from the pipeline to the deployment steps
          image: amidostacksnonprodnode.azurecr.io/stacks-webapp:0.0.248-1684
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
              httpHeaders:
              - name: stacks-k8s-probe
                value: live
            initialDelaySeconds: 45
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
