packages/scaffolding-cli/templates/deploy/k8s/app_k8s/app_deploy_new.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev2-stacks-web-app
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: stacks

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    app.kubernetes.io/instance: stacks-webapp
    app.kubernetes.io/version: 0.0.4-master
    applicationId: stacks/webapp-template
    applicationName: stacks-webapp
    customerID: amido
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    owner: amido/stacks
    projectID: stacks
    tier: frontend
    version: 0.0.4-master
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: stacks
    environment: dev
  name: stacks-webapp
  namespace: dev2-stacks-web-app
spec:
  rules:
  - host: app.nonprod.amidostacks.com
    http:
      paths:
      - backend:
          serviceName: stacks-webapp
          servicePort: 80
        path: /web/stacks(/|$)(.*)
  tls:
  - hosts:
    - nonprod.amidostacks.com

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    app.kubernetes.io/instance: stacks-webapp
    app.kubernetes.io/version: 0.0.4-master
    applicationId: stacks/webapp-template
    applicationName: stacks-webapp
    customerID: amido
    owner: amido/stacks
    projectID: stacks
    stage: devel
    tier: frontend
    version: 0.0.4-master
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: stacks
    environment: dev
  name: stacks-webapp
  namespace: dev2-stacks-web-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: stacks
    environment: dev
  sessionAffinity: None

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    app.kubernetes.io/instance: stacks-webapp
    app.kubernetes.io/version: 0.0.4-master
    applicationId: stacks/webapp-template
    applicationName: stacks-webapp
    customerID: amido
    deployment.kubernetes.io/revision: "4"
    owner: amido/stacks
    projectID: stacks
    stage: devel
    tier: frontend
    version: 0.0.4-master
  creationTimestamp: "2020-04-08T18:34:35Z"
  generation: 4
  labels:
    aadpodidbinding: stacks-webapp-identity
    app.kubernetes.io/component: web
    app.kubernetes.io/name: stacks-webapp
    app.kubernetes.io/part-of: stacks
    environment: dev
  name: stacks-webapp
  namespace: dev2-stacks-web-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/name: webapp
      app.kubernetes.io/part-of: stacks
      environment: dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        app.kubernetes.io/version: 0.0.4-master
        applicationId: stacks/webapp-template
        applicationName: stacks-webapp
        customerID: amido
        owner: amido/stacks
        projectID: stacks
        role: web
        stage: devel
        tier: frontend
        version: 0.0.4-master
      labels:
        aadpodidbinding: stacks-webapp-identity
        app.kubernetes.io/component: web
        app.kubernetes.io/name: webapp
        app.kubernetes.io/part-of: stacks
        environment: dev
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: web
          # this we need to pass from the pipeline to the deployment steps
          image: amidostacksnonprodnode.azurecr.io/stacks-webapp:0.0.248-1684
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
              httpHeaders:
              - name: stacks-k8s-probe
                value: live
            initialDelaySeconds: 45
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
